--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.6'
 	id 'io.spring.dependency-management' version '1.1.0'
     id 'application'
+
 }
 
 group = 'AuroraTech.Co'
@@ -20,6 +21,7 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.28'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.apache.httpcomponents:httpclient'
 }
 
 application {
