--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ plugins {
     id 'application'
 
 }
-
+jar {
+    manifest {
+        attributes 'Main-Class': 'AuroraTech.Co.AuroraContent.AuroraContentApplication'
+    }
+}
 group = 'AuroraTech.Co'
-version = '0.0.2-SNAPSHOT'
+version = '0.0.1.2-SNAPSHOT'
 sourceCompatibility = 11
 
 repositories {
